mobile menu overflow fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,7 +27,10 @@
 
 @layer base {
   body {
-    @apply bg-black-900 overflow-hidden;
+    @apply bg-black-900;
+  }
+  html {
+    @apply overflow-x-hidden;
   }
 }
 
